[package]
name = "dirinventory"
description = "Very fast multithreaded directory traversal"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "1.0.0-beta4"
authors = ["Christian Thäter <ct@pipapo.org>"]
repository = "https://github.com/cehteh/dirinventory.git"
keywords = ["filesystem", "fs", "unix"]
categories = ["filesystem"]
documentation = "http://docs.rs/dirinventory"
edition = "2021"

[dependencies]
openat_ct = "0.2.0-pre5"
log = "0.4"
crossbeam-channel = "0.5"
parking_lot = "0.11"
libc = "0.2"
mpmcpq = "0.6"

[dev-dependencies]
env_logger = "0.9"

#[profile.release]
#lto = true

[badges]
maintenance = { status = "actively-developed" }
